name:                dicom-model
version:             0.1.0.0
synopsis:            DICOM Information Model
description:         Please see README.md
homepage:            http://github.com/danplubell/dicom-model#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2015 Dan Plubell
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.DICOM.Model.InformationEntity
                       Data.DICOM.Model.Module
                       Data.DICOM.Model.DataElement
                       Data.DICOM.Model.Dictionary
                       Data.DICOM.Model.RegisteredUID
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , bimap
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danplubell/dicom-model
